--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -9,6 +9,7 @@
     padding: 10px 10px 0 10px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     position: relative;
     color: #fff;
 }
@@ -17,6 +18,8 @@
     width: 100%;
     height: 100%;
     border-radius: 7px;
+    display: flex;
+    flex-direction: column;
 }
 
 .first-line {
@@ -34,8 +37,12 @@
     padding: 7px 22px;
     font-weight: bold;
     font-size: 13px;
-    color: #fff;
+    color: #FFF;
     background-image: linear-gradient(to right, rgb(250, 11, 122), rgb(242, 14, 250));
+}
+
+.first-line button:hover{
+    font-size: 14px;  
 }
 
 .rodapes{
@@ -56,4 +63,17 @@
     font-size: 15px;
 }
 
+.Mensagem-meio{
+    position: absolute;
+    padding: 80px 0px;   
+    width: 39%;
+    display: flex;
+    flex-direction: column;   
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
 
+.Mensagem-meio h1{
+    margin-bottom: 11px;
+}
