--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -1,6 +1,7 @@
 .loginbox{
     width: 100%;
     height: 100%;
+    background-color: #EFEFEF;
 }
 
 .BackgroundImage{
@@ -48,6 +49,7 @@
 .rodapes{
     display: flex;
     width: 50%;
+    font-size: 12px;
     justify-content: space-between;
     align-items: center;
 }
@@ -75,5 +77,71 @@
 }
 
 .Mensagem-meio h1{
+    font-size: 35px;
     margin-bottom: 11px;
+}
+
+.login-container{
+    position: absolute;
+    width: 280px;
+    height: 400px;
+    background-color: #FFF;
+    color: rgb(122, 120, 120);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    top: 50%;
+}
+
+
+.login-container h2{
+    padding: 30px 0;
+}
+
+.input-area{
+    width: 100%;
+    height: 85px;
+    margin-top: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.input-area input{
+    width: 85%;
+    padding: 10px;
+    border-radius: 9px;
+    border: 1px solid rgb(230, 227, 227);
+}
+
+.login-icons{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    padding: 0 35px
+}
+
+.login-icons svg{
+    border: 1px solid rgb(230, 227, 227);
+    border-radius: 5px;
+    font-size: 25px;
+    width: 50px;
+    color: black;
+    height: 40px;
+}
+
+.login-icons svg:first-child{
+    color: rgb(60, 112, 253);
+}
+
+.remember-button{
+    padding-top: 15px;
+    width: 85%;
+    display: flex;
+    align-items: center;
+}
+.remember-button input{
+    margin-right: 10px;
 }
