--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -84,7 +84,7 @@
 .login-container{
     position: absolute;
     width: 280px;
-    height: 400px;
+    height: 420px;
     background-color: #FFF;
     color: rgb(122, 120, 120);
     border-radius: 10px;
@@ -144,4 +144,29 @@
 }
 .remember-button input{
     margin-right: 10px;
+}
+
+.buttons-send{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 130px;
+    padding-top: 25px;
+}
+
+.buttons-send button{
+    width: 85%;
+    height: 30px;
+    border: 0;
+    font-size: 12px;
+    font-weight: bold;
+    border-radius: 7px;
+    color: #FFF;
+    background-color: #221088;
+}
+
+.buttons-send button:first-child{
+    background-image: linear-gradient(to right, rgb(65, 195, 255), rgb(1, 122, 179));
 }
