--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -226,11 +226,50 @@
 
 @media screen and (max-width: 300px) {
 
-    .first-line{
-        
+    .BackgroundImage {
+        width: 100%;
+        height: 35%;
+        padding: 10px 10px 0 10px;
     }
 
-    .options{
+    .first-line {
+        justify-content: space-around;
+        padding: 25px 15px;
+    }
+
+    .first-line h3{
+        font-size: 14px;
+    }
+
+    .first-line button{
+        padding: 8px 15px;
+        font-weight: bold;
+        font-size: 10px;
+        color: #FFF;
+        transition: ease 0.5s;
+        background-image: linear-gradient(to right, rgb(250, 11, 122), rgb(242, 14, 250));
+    }
+
+    .options {
+        display: none;
+    }
+
+    .Mensagem-meio {
+        position: absolute;
+        padding: 65px 0px;   
+        display: flex;
+        flex-direction: column;   
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    
+    .Mensagem-meio h1 {
+        font-size: 35px;
+        margin-bottom: 0px;
+    }
+
+    .Mensagem-meio p {
         display: none;
     }
 }
