--- a/src/Pages/SignUp/SignUp.css
+++ b/src/Pages/SignUp/SignUp.css
@@ -1,6 +1,6 @@
-.login-container{
+.login-container-signup{
     position: absolute;
-    width: 280px;
+    width: 310px;
     height: 420px;
     background-color: #FFF;
     color: rgb(122, 120, 120);
@@ -8,18 +8,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
     top: 65%;
+    padding: 20px 0px;
 }
 
 
-.login-container h2{
-    padding: 25px 0;
+.login-container-signup h2{
+    padding: 5px 0;
 }
 
 
-.input-area{
+.input-area-signup{
     width: 100%;
-    height: 85px;
+    height: 190px;
     margin-top: 0px;
     display: flex;
     flex-direction: column;
@@ -27,14 +29,48 @@
     align-items: center;
 }
 
-.input-area input{
-    width: 85%;
+.input-area-signup input{
+    width: 88%;
     padding: 10px;
+    margin-bottom: 15px;
     border-radius: 9px;
     border: 1px solid rgb(230, 227, 227);
     transition: ease 0.5s;
 }
 
-.input-area input:hover{
+.input-area-signup input:hover{
     border: 1px solid rgb(182, 181, 181);
+}
+
+.buttons-send-signup{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 130px;
+    padding-top: 25px;
+}
+
+.buttons-send-signup button{
+    width: 88%;
+    height: 30px;
+    border: 0;
+    font-size: 12px;
+    font-weight: bold;
+    border-radius: 7px;
+    color: #FFF;
+    background-color: #221088;
+}
+
+.buttons-send-signup button:first-child{
+    background-image: linear-gradient(to right, rgb(65, 195, 255), rgb(1, 122, 179));
+}
+
+@media screen and (max-height: 800px) {
+    .login-container-signup{
+        width: 280px;
+        height: 380px;
+        top: 60%;
+    }   
 }
