--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -1,6 +1,33 @@
 .sidebar{
     height: 100vh;
-    width: 90px;
+    width: 85px;
     color: #FFF;
     background-color: brown;
+    display: flex;
+    flex-direction: column;
+}
+
+.buttom-module{
+    width: 100%;
+    height: 70px;
+    background-color: blueviolet;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1px;
+    transition: ease 0.5s;
+}
+
+.buttom-module:hover{
+    background-color: rgb(109, 22, 190);
+    cursor: pointer;
+}
+
+.buttom-module svg{
+    font-size: 30px;
+}
+
+.buttom-module:last-child{
+    margin-top: calc(100vh - 70px - 70px - 70px - 70px - 75px);
+    
 }
