--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -1,16 +1,15 @@
 .sidebar{
     height: 100vh;
-    width: 85px;
     color: #FFF;
-    background-color: brown;
+    background-color: #141111;
     display: flex;
     flex-direction: column;
+    transition: ease 0.2s;
 }
 
 .buttom-module{
     width: 100%;
-    height: 70px;
-    background-color: blueviolet;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,8 +17,15 @@
     transition: ease 0.5s;
 }
 
+.buttom-module p {
+    font-size: 14px;
+    position: absolute;
+    left: 80px;
+    
+}
+
 .buttom-module:hover{
-    background-color: rgb(109, 22, 190);
+    background-color: #1f1a1a;
     cursor: pointer;
 }
 
@@ -28,6 +34,25 @@
 }
 
 .buttom-module:last-child{
-    margin-top: calc(100vh - 70px - 70px - 70px - 70px - 75px);
-    
+    margin-top: calc(100vh - 50px - 50px - 50px - 50px - 55px);   
+}
+
+.buttom-hide{
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;   
+    transition: ease 0.2s;
+}
+
+.buttom-hide svg{
+    font-size: 20px;
+    color: #FFF;
+}
+
+.buttom-hide svg:hover{
+    font-size: 25px;
+    cursor: pointer;
 }
