--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,5 +1,14 @@
 .home-container{
     background-color: rgb(12, 7, 7);
     height: 100vh;
+    color: #FFF;
+    display: flex;
+}
+
+.reamaining-area{
+    height: 100%;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
