Redux saga finalmente funcioneu, com ele o login de usuários agora está funcionando corretamente também.

--- a/src/Components/ButtonTest/ButtonTest.css
+++ b/src/Components/ButtonTest/ButtonTest.css
@@ -6,11 +6,12 @@ button{
     margin-top: 10px;
     font-weight: bold;
     font-size: 17px;
-    background-color: #FFF;
+    background-color: #ffffff38;
     transition: ease 0.2s;
+    color: #FFF;
 }
 
 button:hover{
-    background-color: #d8d5d5;
+    background-color: #ffffff6b;
     cursor: pointer;
 }
