--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -14,7 +14,7 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 1px;
-    transition: ease 0.5s;
+    transition: ease 0.3s;
 }
 
 .buttom-module p {
@@ -24,7 +24,7 @@
 }
 
 .buttom-module:hover{
-    background-color: #1d1919;
+    background-color: #272525;
     cursor: pointer;
 }
 
@@ -34,6 +34,27 @@
 
 .buttom-module:last-child{
     margin-top: calc(100vh - 50px - 50px - 50px - 50px - 55px);   
+}
+
+.buttom-module-active{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1px;
+    transition: ease 0.3s;
+    background-color: #272525;
+}
+
+.buttom-module-active p{
+    font-size: 14px;
+    position: absolute;
+    left: 80px;  
+}
+
+.buttom-module-active svg {
+    font-size: 30px;
 }
 
 .buttom-hide{
