--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -24,7 +24,7 @@
 }
 
 .buttom-module:hover{
-    background-color: #272525;
+    background-color: #5F00D8;
     cursor: pointer;
 }
 
@@ -44,7 +44,7 @@
     align-items: center;
     margin-bottom: 1px;
     transition: ease 0.3s;
-    background-color: #272525;
+    background-color: #5F00D8;
 }
 
 .buttom-module-active p{
