--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -30,6 +30,54 @@
     width: 48%;
     height: 100%;
     border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.title-model{    
+    width: 100%;
+    font-size: 16px;
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.title-model h2{    
+    margin: 0;
+    text-align: center;
+}
+
+.title-model svg{    
+    position: absolute;
+    font-size: 30px;
+    right: 0px;
+    margin-right: 15px;
+}
+
+.title-model svg:hover{    
+    font-size: 34px;
+}
+
+.title-model button{ 
+    font-size: 17px;
+    position: absolute;
+    right: 0px;
+    margin-right: 3%;
+    padding: 5px 16px;
+    color: #FFF;
+    background-color: #5F00D8;
+    border: none;
+    border-radius: 7px;
+    transition: ease 0.3s;
+}
+
+.title-model button:hover{ 
+    padding: 6px 17px;
+    background-color: #6f0df0;
+    font-size: 18px;
 }
 
 @media screen and (max-height: 900px) {
