--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -35,6 +35,23 @@
     align-items: center;
 }
 
+.render-area-obejectives {
+    width: 100%;
+    height: 100%;
+    margin-top: 15px;
+    overflow: auto;
+}
+
+.scroll-area-objectives{
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+
 .title-model{    
     width: 100%;
     font-size: 16px;
@@ -80,8 +97,58 @@
     font-size: 18px;
 }
 
+.objectives{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: orange;
+    width: 95%;
+    height: 45px;
+    background-color: #1F1D1D;
+    border-radius: 7px;
+    margin-top: 15px;
+}
+
+#Title {
+    width: 180px;
+}
+
+#Percent{
+    width: 45px;
+    height: 85%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    background-color: #5F00D8;
+}
+
+#Achieved{
+    width: 220px;
+    padding-left: 18px;
+}
+
+.options-buttons {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 20px;
+    height: 98%;
+    width: 65px;
+}
+
+.options-buttons svg {
+    transition: ease 0.3s;
+    flex-shrink: 0;
+}
+
+.options-buttons svg:hover {
+    color: #6f0df0;
+    transform: scale(1.3);
+}
+
 @media screen and (max-height: 900px) {
-    .line-dashboard{
+    .line-dashboard {
         width: 90%;
         height: 350px;
         display: flex;
