--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -39,7 +39,26 @@
     width: 100%;
     height: 100%;
     margin-top: 15px;
+    padding-bottom: 18px;
     overflow: auto;
+    
+}
+
+.render-area-obejectives::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+.render-area-obejectives::-webkit-scrollbar-track {
+    background-color: #141111;
+}
+  
+.render-area-obejectives::-webkit-scrollbar-thumb {
+    background-color: #1F1D1D;
+    border-radius: 4px;
+}
+  
+.render-area-obejectives::-webkit-scrollbar-thumb:hover {
+    background-color: #1F1D1D;
 }
 
 .scroll-area-objectives{
@@ -107,6 +126,7 @@
     background-color: #1F1D1D;
     border-radius: 7px;
     margin-top: 15px;
+    margin-left: 18px;
 }
 
 #Title {
