--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -77,3 +77,84 @@
     font-size: 25px;
     cursor: pointer;
 }
+
+@media screen and (max-width: 600px) {
+    .sidebar{
+        height: 60px;
+        width: 100%;
+        color: #FFF;
+        /* background-color: #141111; */
+        background-color: red;
+        display: flex;
+        flex-direction: row;
+        transition: ease 0.2s;
+        position: fixed;
+        bottom: 0;
+    }
+    
+    .buttom-module{
+        width: 60px;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 1px;
+        transition: ease 0.3s;
+    }
+    
+    .buttom-module p {
+        font-size: 14px;
+        position: absolute;
+        left: 80px;  
+        display: none;
+    }
+    
+    .buttom-module:hover{
+        background-color: #5F00D8;
+        cursor: pointer;
+    }
+    
+    .buttom-module svg{
+        font-size: 30px;
+    }
+    
+    .buttom-module:last-child{
+        
+    }
+    
+    .buttom-module-active{
+        width: 60px;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 1px;
+        transition: ease 0.3s;
+        background-color: #5F00D8;
+    }
+    
+    .buttom-module-active p{
+        font-size: 14px;
+        position: absolute;
+        left: 80px;  
+        display: none;
+    }
+    
+    .buttom-module-active svg {
+        font-size: 30px;
+    }
+    
+    .buttom-hide{
+        position: fixed;
+        display: none;
+        justify-content: center;
+        align-items: center;
+        width: 50px;
+        height: 50px;   
+        transition: ease 0.2s;
+    }
+
+    .buttom-hide svg{
+        display: none;
+    }
+}
