--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -191,14 +191,20 @@
         height: auto;
         color: #FFF;
         display: flex;
+        width: 100%;
+        margin-left: 0px;
+        justify-content: center;
+        align-items: center;
     }
 
     .reamaining-area{
-        padding: 35px 0;
+        padding: 15px 0 55px;
+        margin-left: 0px;
+        
     }
     
     .line-dashboard{
-        width: 90%;
+        width: 98%;
         height: 400px;
         display: flex;
         flex-direction: column;
@@ -207,8 +213,49 @@
     .dash-model{
         background-color: #141111;
         width: 100%;
-        height: 165px;
+        height: 185px;
         border-radius: 8px;
+    }
+
+    .objectives{
+        width: 95%;
+        height: 45px;
+        margin-top: 10px;
+        margin-left: 12px;
+    }
+
+    
+    #Title {
+        width: 160px;
+        padding-left: 15px;
+    }
+
+    #Percent{
+        width: 40px;
+        height: 75%;
+        display: flex;
+        align-items: center;
+        font-size: 12px;
+        justify-content: center;
+        border-radius: 50%;
+        background-color: #5F00D8;
+    }
+
+    #Achieved{
+        width: 220px;
+        padding-left: 25px;
+    }
+
+    .options-buttons {
+        font-size: 20px;
+        height: 98%;
+        width: 88px;
+        padding-right: 15px;
+    }
+
+    .options-buttons svg {
+        transition: ease 0.3s;
+        flex-shrink: 0;
     }
 }
 
