Criado filtro por usuário nos dados buscados e ajustado para grid atualizar quando tiver alteração nos dados.

--- a/src/Pages/Objectives/Objectives.css
+++ b/src/Pages/Objectives/Objectives.css
@@ -58,7 +58,7 @@
     height: 75px;
     width: 100%;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: center;
 }
 
